# akatsuki

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: custom_tools.py  customize_agents.py  dev_team.py  full_team.py  presets.py  simple_agent.py  team.py
src/my_ai_team/: __init__.py  cli.py  config.py
src/my_ai_team/agents/: __init__.py  base.py  pipeline.py  presets.py  teams.py
src/my_ai_team/tools/: __init__.py  base.py  filesystem.py
src/my_ai_team/utils/: logging.py
tests/: test_agents.py  test_cli.py  test_config.py  test_pipeline.py
