[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-ai-team"
version = "0.1.0"
description = "Reusable AI agent patterns built on the Anthropic Agent SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TakaGoto" },
]
keywords = ["ai", "agents", "anthropic", "claude", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic-agents>=0.1.0",
]

[project.scripts]
akatsuki = "my_ai_team.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_ai_team"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
